--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.15"
+    "@prisma/client": "^6.1.0",
+    "bcryptjs": "^2.4.3",
+    "eslint": "^9.17.0",
+    "hono": "^4.6.15",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.1.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest"
