--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "Washify-HonoBE",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts",
+    "start": "bun run src/index.ts",
+    "seed": "bun prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
@@ -13,6 +16,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/bun": "latest"
   }
 }
